# busker

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
busker/: __init__.py  actions.py  executive.py  gui.py  history.py  main.py  manager.py  proofer.py  runner.py  scraper.py  stager.py  tactics.py  tagger.py  types.py  visitor.py  zone.py
busker/test/: test_executive.py  test_graph.py  test_history.py  test_proofer.py  test_runner.py  test_scenario_01.stage.toml  test_scenario_02.stage.toml  test_scenario_03.stage.toml  test_scraper.py  test_stager.py  test_tagger.py  test_zone.py
busker/utils/: graph.py  proofread.py  rotu-puzzle.stage.toml  snoop.py
