# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "busker"
version = "0.1.0"
description = "A utility for testing Balladeer projects."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["interactive fiction", "balladeer"]
authors = [
    {name = "D E Haynes", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    # "balladeer >= 0.48.0",
    # "cssselect >= 1.2.0",
    # "elementpath >= 4.3.0",
    # "lxml >= 5.1.0",
    # "tk-html-widgets >= 0.4.0",
]

[project.optional-dependencies]
test = [
    # "aiosqlite >= 0.20.0",
    # "asgi-lifespan >= 2.1.0",
    # "httpx >= 0.27.0",
]

[project.scripts]
busker-cli = "busker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
]
exclude = [
]
