# For possible options see https://peps.python.org/pep-0621/
 
[project]
name = "busker"
version = "0.7.0"
description = "A utility for testing Balladeer projects."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["interactive fiction", "balladeer"]
authors = [
    {name = "D E Haynes", email = "tundish@gigeconomy.org.uk"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
]

[project.optional-dependencies]
test = [
]

[project.scripts]
busker-cli = "busker.main:run"

[build-system]
# requires = ["hatchling == 1.21.1"]
requires = ["hatchling >= 1.22.4"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
"*.md",
"busker/*",
]
exclude = [
"busker_*",
]

[tool.hatch.build.targets.wheel]
include = [
"*.md",
"busker/*",
]
exclude = [
"busker_*",
]
